Fix multiple footers issues; element behind gradient is now clickable

--- a/client/src/theme/components/footerList.scss
+++ b/client/src/theme/components/footerList.scss
@@ -1,10 +1,12 @@
 /* Parsec Cloud (https://parsec.cloud) Copyright (c) BUSL-1.1 2016-present Scille SAS */
 
-.folder-footer, .user-footer {
+.folder-footer, .user-footer, .workspaces-footer {
   width: 100%;
   position: fixed;
+  pointer-events: none;
   bottom: 0;
   padding: 1em 0 2.5em;
+  z-index: 100;
   text-align: center;
   background: linear-gradient(360deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
 
